--- a/conf/config.conf
+++ b/conf/config.conf
@@ -87,6 +87,10 @@ CFST_TLR=0.2
 CFST_SL=5
 
 #------------------------------------------推送设置------------------------------------------------
+#           ----飞书推送设置----
+feishuToken=
+#           ----飞书推送设置结束----
+
 #           ----TG推送设置----
 #	（填写即为开启推送，未填写则为不开启）
 
