--- a/conf/config.conf
+++ b/conf/config.conf
@@ -88,6 +88,7 @@ CFST_SL=5
 
 #------------------------------------------推送设置------------------------------------------------
 #           ----飞书推送设置----
+# 例如 xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 feishuToken=
 #           ----飞书推送设置结束----
 
