--- a/config/config.conf
+++ b/config/config.conf
@@ -5,6 +5,10 @@
 #   新增单个IP下载测速最长时间配置
 #   修复反代IP线路并新增一条线路
 #
+#------------------------------------------定时运行时间---------------------------------------------
+# 例如："3 23 * * *" 也可利用在线工具生成 http://cron.ciding.cc/
+TIMING="0 * * * *"
+
 #------------------------------------------工作模式配置---------------------------------------------
 # --运行模式，ipv4 or ipv6 默认为：ipv4
 #	指定工作模式为ipv4还是ipv6。如果为ipv6，请在文件夹下添加ipv6.txt
