--- a/config/config.conf
+++ b/config/config.conf
@@ -50,7 +50,10 @@ LINE=0
 
 #--------------------------------------CloudflareST配置---------------------------------------------
 # --测速地址，有自己的测速地址可替换，若不填写则使用默认地址（建议使用自建地址）
-CFST_URL=https://cf.xiu2.xyz/url
+# 实际上，除了在网页进行测速，我们同时可以借助https://speed.cloudflare.com/__down?during=download&bytes=x生成自定义大小测速的文件，将其中的x更改为需要的测速文件大小，x的单位为字节（byte）。
+# 300M https://speed.cloudflare.com/__down?during=download&bytes=314572800
+# CFST_URL=https://cf.xiu2.xyz/url
+CFST_URL='https://speed.cloudflare.com/__down?during=download&bytes=314572800'
 
 # --测速地址端口，指定测速端口；延迟测速/下载测速时使用的端口；(默认 443 端口)
 CFST_TP=443
