--- a/config/config.conf
+++ b/config/config.conf
@@ -69,9 +69,10 @@ CFST_STM=
 httping_code=
 
 # --匹配指定地区，地区名为当地机场三字码，英文逗号分隔，支持小写，支持 Cloudflare、AWS CloudFront，仅 HTTPing 模式可用；(默认 所有地区)
+# https://www.cloudflarestatus.com/
 # 例如:HKG,KHH,NRT,LAX,SEA,SJC,FRA,MAD
-# 香港、台湾
-cfcolo=HKG,KHH,TPE
+# 香港、台湾、日本
+cfcolo=HKG,KHH,TPE,FUK,OKA,KIX,NRT
 
 # --测速线程数量，越多测速越快，性能弱的设备 (如路由器) 请勿太高；(默认 200 最多 1000 )
 CFST_N=200
@@ -79,7 +80,7 @@ CFST_N=200
 # --延迟测速次数，单个 IP 延迟测速次数，为 1 时将过滤丢包的IP，TCP协议；(默认 4 次 )
 CFST_T=4
 
-# --下载测速数量，延迟测速并排序后，从最低延迟起下载测速的数量；(默认 10 个)
+# --下载测速数量，延迟测速并排序后，从最低延迟起下载测速的数量；(默认 10 个，凑齐10个才停止测速)
 CFST_DN=10
 
 # --平均延迟上限，只输出低于指定平均延迟的 IP，可与其他上限/下限搭配；(默认9999 ms 这里推荐配置300 ms)
