--- a/config/config.conf
+++ b/config/config.conf
@@ -39,6 +39,9 @@ x_email=
 # --Global API Key--
 api_key=
 
+# zone_id
+zone_id=
+
 #------------------------------------------dnspod配置------------------------------------------
 # --dnspod的id,token--
 #	API密钥-DNSPod Token（注意，不是腾讯云API密钥）-创建密钥，得到ID以及Token。填写格式为："ID,Token"
