--- a/config/config.conf
+++ b/config/config.conf
@@ -1,10 +1,3 @@
-#		版本：20231004
-#		适配XIU2/CloudflareSpeedTest:v2.2.4
-#		优化测速指定端口判断
-#		优化cloudflare配置
-#   新增单个IP下载测速最长时间配置
-#   修复反代IP线路并新增一条线路
-#
 #------------------------------------------定时运行时间---------------------------------------------
 # 例如："3 23 * * *" 也可利用在线工具生成 http://cron.ciding.cc/
 TIMING="0 * * * *"
@@ -13,7 +6,7 @@ TIMING="0 * * * *"
 # --运行模式，ipv4 or ipv6 默认为：ipv4
 #	指定工作模式为ipv4还是ipv6。如果为ipv6，请在文件夹下添加ipv6.txt
 #	ipv6.txt在CloudflareST工具包里，下载地址：https://github.com/XIU2/CloudflareSpeedTest/releases
-IP_ADDR=ipv4
+IP_ADDR='ipv4'
 
 # --是否使用反代ip，是否使用优质CF反代ip地址进行优选
 #	线路1：CF反代ip地址调用ip-scanner/cloudflare仓库。仓库地址：https://github.com/ip-scanner/cloudflare
@@ -39,7 +32,7 @@ x_email=
 # --Global API Key--
 api_key=
 
-# zone_id
+# zone_id，可不填，程序会自动获取
 zone_id=
 
 #------------------------------------------dnspod配置------------------------------------------
@@ -101,70 +94,70 @@ CFST_SL=5
 #------------------------------------------推送设置------------------------------------------------
 #           ----飞书推送设置----
 # 例如 xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
-feishuToken=
+feishuToken=''
 #           ----飞书推送设置结束----
 
 #           ----TG推送设置----
 #	（填写即为开启推送，未填写则为不开启）
 
 # --TG机器人token，例如：123456789:ABCDEFG...
-telegramBotToken=
+telegramBotToken=''
 
 # --用户ID或频道、群ID，例如：-123456789
-telegramBotUserId=
+telegramBotUserId=''
 
 # --tg推送代理域名，可用于本地没有科学环境，想要调用tgAPI需要自建反向代理API域名 （待更新教程）
-Proxy_TG=
+Proxy_TG=''
 
 #        ----TG推送设置结束----
 
 #        ----PushPlus设置----
 #     PushPlus推送说明（https://www.pushplus.plus/）
 # --token码--
-PushPlusToken=
+PushPlusToken=''
 
 #       -----PushPlus推送设置结束----
 ##
 #        ----Server 酱推送设置----
 #     Server 酱推送说明（https://sct.ftqq.com/）
 # --token码--
-ServerSendKey=
+ServerSendKey=''
 #
 #       ----pushdeer推送设置结束----
 ##
 #        ----pushdeer推送设置----
 #     PushDeer推送说明（http://www.pushdeer.com/product.html）
 # --token码--
-PushDeerPushKey=
+PushDeerPushKey=''
 #
 #       ----pushdeer推送设置结束----
 ##
 # --企业ID--
 #	（https://developer.work.weixin.qq.com/document/path/90665#corpid）
-CORPID=
+CORPID=''
 #
 # --应用ID--
 #	(https://developer.work.weixin.qq.com/document/path/90665#secret)
-SECRET=
+SECRET=''
 #
 # --agentid--
 #	(https://developer.work.weixin.qq.com/document/path/90665#agentid)
-AGENTID=
+AGENTID=''
 #
 # --成员ID--
 #	(https://developer.work.weixin.qq.com/document/path/90665#userid)
 #	设置需要推送给谁，不填写默认推送给全员
-USERID=
+USERID=''
 #
 # --企业微信推送代理域名--
 #	由于企业微信限制推送需要ip白名单，但家里的网络一般不是固定ip，所以需要自建反向代理API域名，将反向代理服务器的ip加入企业微信的ip白名单
-Proxy_WX=
+Proxy_WX=''
 #
 #     ----企业微信推送设置结束----
 ##
 #
 # --Synology Chat推送
 #	使用群晖的chat套件进行推送，下方填写群晖chat中-整合-传入的webhook中，的Webhook URL地址。
-Synology_Chat_URL=""
+Synology_Chat_URL=''
 #
 #--------------------------------------------结束----------------------------------------------------
