--- a/config/config.conf
+++ b/config/config.conf
@@ -76,8 +76,8 @@ CFST_N=200
 # --延迟测速次数，单个 IP 延迟测速次数，为 1 时将过滤丢包的IP，TCP协议；(默认 4 次 )
 CFST_T=4
 
-# --下载测速数量，延迟测速并排序后，从最低延迟起下载测速的数量；(默认 10 个，凑齐10个才停止测速)
-CFST_DN=10
+# --下载测速数量，延迟测速并排序后，从最低延迟起下载测速的数量；(默认 5 个，凑齐10个才停止测速，要不然就一直凑，直到有 5 个为止)
+CFST_DN=5
 
 # --平均延迟上限，只输出低于指定平均延迟的 IP，可与其他上限/下限搭配；(默认9999 ms 这里推荐配置300 ms)
 CFST_TL=300
