--- a/config/config.conf
+++ b/config/config.conf
@@ -65,6 +65,7 @@ CFST_STM=
 httping_code=
 
 # --匹配指定地区，地区名为当地机场三字码，英文逗号分隔，支持小写，支持 Cloudflare、AWS CloudFront，仅 HTTPing 模式可用；(默认 所有地区)
+# 设置了这个延迟测速的时候就会选择指定的ip，没有的话就无法进行
 # https://www.cloudflarestatus.com/
 # 例如:HKG,KHH,NRT,LAX,SEA,SJC,FRA,MAD
 # 香港、台湾、日本
