--- a/config/config.conf
+++ b/config/config.conf
@@ -68,8 +68,8 @@ httping_code=
 # 设置了这个延迟测速的时候就会选择指定的ip，没有的话就无法进行
 # https://www.cloudflarestatus.com/
 # 例如:HKG,KHH,NRT,LAX,SEA,SJC,FRA,MAD
-# 香港、台湾、日本
-cfcolo=HKG,KHH,TPE,FUK,OKA,KIX,NRT
+# 香港、台湾、日本,FUK,OKA,KIX,NRT
+cfcolo=HKG,KHH,TPE
 
 # --测速线程数量，越多测速越快，性能弱的设备 (如路由器) 请勿太高；(默认 200 最多 1000 )
 CFST_N=200
