--- a/config/config.conf
+++ b/config/config.conf
@@ -68,7 +68,11 @@ httping_code=
 # 设置了这个延迟测速的时候就会选择指定的ip，没有的话就无法进行
 # https://www.cloudflarestatus.com/
 # 例如:HKG,KHH,NRT,LAX,SEA,SJC,FRA,MAD
-# 香港、台湾、日本,FUK,OKA,KIX,NRT
+# 欧洲：AMS,ATH,BCN,BEG,TXL,BTS,BRU,OTP,BUD,KIV,CPH,ORK,DUB,DUS,EDI,FRA,GVA,GOT,HAM,HEL,IST,ADB,KBP,LIS,LHR,LUX,MAD,MAN,MRS,MXP,MSQ,DME,MUC,LCA,OSL,PMO,CDG,PRG,KEF,RIX,FCO,LED,SOF,ARN,STR,TLL,TBS,SKG,TIA,KLD,VIE,VNO,WAW,SVX,ZAG,ZRH,LYS,BOD
+# 北美：IAD,ATL,BOS,BUF,YYC,CLT,ORD,CMH,DFW,DEN,DTW,HNL,IAH,IND,JAX,MCI,LAS,LAX,MFE,MEM,MEX,MIA,MSP,MGM,YUL,BNA,EWR,ORF,OMA,YOW,PHL,PHX,PIT,PDX,QRO,RIC,SMF,SLC,SAN,SJC,YXE,SEA,FSD,STL,TLH,YYZ,YVR,YWG,SFO,KIN,BGR,AUS,ABQ,GDL,SAT,CLE,RDU,OKC,TPA
+# 日本：FUK,OKA,KIX,NRT
+# 台湾：KHH,TPE
+# 香港：HKG
 cfcolo=HKG,KHH,TPE
 
 # --测速线程数量，越多测速越快，性能弱的设备 (如路由器) 请勿太高；(默认 200 最多 1000 )
