--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v4 # 官方的action，获取代码
 
     - name: 2.Build image # 第二步，构建docker镜像
-      run: docker build . --file Dockerfile --tag yujibuzailai/cfstddns:$(date +%Y-%m-%d) # 2024-06-16
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/cfstddns:$(date +%Y-%m-%d) # 2024-06-16
 
     - name: 3.Log in to Docker Hub # 第三步，登录docker hub
       uses: docker/login-action@v3  # 三方的action操作， 执行docker login
@@ -29,4 +29,4 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
     - name: 4.Push image # 第四步，推送镜像到docker hub 
-      run: docker push yujibuzailai/cfstddns:$(date +%Y-%m-%d)
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cfstddns:$(date +%Y-%m-%d)
